allow machine tokens to be viewed again
